--- a/bookstore_inventory/templates/crud/manage_books.html
+++ b/bookstore_inventory/templates/crud/manage_books.html
@@ -24,11 +24,11 @@
     <input type="text" name="gender" id="GenderTextInput">
 
     <!-- Publication Date -->
-    <label for="PubDateTextInput">Pub. date</label>
+    <label for="PubDateTextInput">Publication date</label>
     <input type="date" name="pub_date" id="PubDateTextInput">
 
     <!-- Number of pages -->
-    <label for="NumPagesTextInput">Pages</label>
+    <label for="NumPagesTextInput">Number of Pages</label>
     <input type="number" name="num_pages" id="NumPagesTextInput">
 
     <!-- Submit button -->
