--- a/bookstore_users/templates/bookstore_users/accounts/login.html
+++ b/bookstore_users/templates/bookstore_users/accounts/login.html
@@ -1,14 +1,14 @@
 {% block content %}
 
 {% if error %}
-<p>Your username and password didn't match. Please try again.</p>
+<p>Your email or password didn't match. Please try again.</p>
 {% endif %}
 
 <form method="POST" action="{% url 'users:login' %}">
     {% csrf_token %}
     <div>
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username" required>
+        <label for="email">email</label>
+        <input type="text" name="email" id="email" required>
     </div>
     <div>
         <label for="password">Password</label>
